# osmium

./: .pnp.cjs  package.json
.github/workflows/: cd.yml  ci.yml  compute-version.yml  execute-yarn-workspace-command.yml  publish-core.yml  publish-extension-auto.yml  publish-extension-manual.yml  publish-extension.yml  publish-library.yml  publish-targeted-extension.yml
libs/foundry-wrapper/: Cargo.toml
toolchains/solidity/: package.json
toolchains/solidity/core/: package.json
toolchains/solidity/core/crates/extension/src/: lib.rs
toolchains/solidity/core/crates/foundry-server/: Cargo.toml
toolchains/solidity/core/crates/linter-cli/src/: main.rs
toolchains/solidity/core/crates/linter-lib/src/: linter.rs
toolchains/solidity/core/crates/linter-lib/tests/: linter.rs
toolchains/solidity/core/crates/linter-server/src/: lib.rs
toolchains/solidity/extension/: package.json
toolchains/solidity/extension/src/: client.ts
